# GlobalGameJam2020__Requair

./: .gitignore
Levels/: 3.json
ProjectTemplateSln/: CMakeLists.txt
ProjectTemplateSln/ProjectTemplateExe/: CMakeLists.txt
ProjectTemplateSln/ProjectTemplateExe/source/: main.cpp
ProjectTemplateSln/ProjectTemplateLib/: CMakeLists.txt
ProjectTemplateSln/ProjectTemplateLib/include/: ProjectTemplate.h
ProjectTemplateSln/ProjectTemplateLib/include/ProjectTemplate/Core/: BossRegion.h  EventController.h  HeroRegion.h  MainMenuRegion.h  RuntimeRegion.h
ProjectTemplateSln/ProjectTemplateLib/include/ProjectTemplate/Core/Regions/: BossRegion.h  HeroRegion.h  MainMenuRegion.h  RuntimeRegion.h  TemplateRegion.h
ProjectTemplateSln/ProjectTemplateLib/include/ProjectTemplate/Utils/: DllUtils.h
ProjectTemplateSln/ProjectTemplateLib/source/: ProjectTemplate.cpp
ProjectTemplateSln/ProjectTemplateLib/source/Core/: BossRegion.cpp  EventController.cpp  HeroRegion.cpp  MainMenuRegion.cpp  RuntimeRegion.cpp
ProjectTemplateSln/ProjectTemplateLib/source/Core/Regions/: BossRegion.cpp  HeroRegion.cpp  MainMenuRegion.cpp  RuntimeRegion.cpp
ProjectTemplateSln/RequairExe/source/: main.cpp
ProjectTemplateSln/RequairLib/include/: Requair.h
ProjectTemplateSln/RequairLib/include/Requair/Core/: EventController.h
ProjectTemplateSln/RequairLib/include/Requair/Core/Regions/: BossRegion.h  HeroRegion.h  MainMenuRegion.h  RuntimeRegion.h
ProjectTemplateSln/RequairLib/include/Requair/Utils/: DllUtils.h
ProjectTemplateSln/RequairLib/source/: Requair.cpp
ProjectTemplateSln/RequairLib/source/Core/: EventController.cpp
ProjectTemplateSln/RequairLib/source/Core/Regions/: BossRegion.cpp  HeroRegion.cpp  MainMenuRegion.cpp  RuntimeRegion.cpp  TemplateRegion.cpp
RequairSln/: CMakeLists.txt
RequairSln/RequairExe/: CMakeLists.txt
RequairSln/RequairLib/: CMakeLists.txt
RequairSln/RequairLib/include/Requair/Core/: EventController.h
RequairSln/RequairLib/include/Requair/Core/Actions/: Action.h  ActionParser.h  AnimationAction.h  ForkAction.h  MoveAction.h
RequairSln/RequairLib/include/Requair/Core/Boss/: Boss.h
RequairSln/RequairLib/include/Requair/Core/GameObjects/: AnimatedItem.h  Arm.h  Door.h  Floor.h  InteractiveObject.h  Item.h  Key.h  Leg.h  PhysicalObject.h  Pot.h  SpriteItem.h  Wall.h
RequairSln/RequairLib/include/Requair/Core/Regions/: BossRegion.h  HeroRegion.h  MainMenuRegion.h  RuntimeRegion.h  TemplateRegion.h
RequairSln/RequairLib/include/Requair/Utils/: JsonParserUtil.h
RequairSln/RequairLib/source/: Requair.cpp
RequairSln/RequairLib/source/Core/: EventController.cpp
RequairSln/RequairLib/source/Core/Actions/: Action.cpp  ActionParser.cpp  AnimationAction.cpp  ForkAction.cpp  MoveAction.cpp
RequairSln/RequairLib/source/Core/Boss/: Boss.cpp  Inventory.cpp
RequairSln/RequairLib/source/Core/GameObjects/: AnimatedItem.cpp  Arm.cpp  Door.cpp  Floor.cpp  Item.cpp  Key.cpp  Leg.cpp  PhysicalObject.cpp  Pot.cpp  SpriteItem.cpp  Wall.cpp
RequairSln/RequairLib/source/Core/Regions/: BossRegion.cpp  HeroRegion.cpp  MainMenuRegion.cpp  RuntimeRegion.cpp  TemplateRegion.cpp
RequairSln/RequairLib/source/Utils/: JsonParserUtil.cpp
